# game_server

./: CMakeLists.txt  Dockerfile  README.md  conanfile.txt
src/: app.h  collision_detector.cpp  collision_detector.h  command_line_args.h  database.h  endpoint.h  extra_data.cpp  extra_data.h  game_item_player_provider.h  game_office_player_provider.h  http_content_type.cpp  http_content_type.h  http_path_utils.cpp  http_path_utils.h  http_server.cpp  http_server.h  http_utils.cpp  http_utils.h  json_builder.cpp  json_builder.h  json_fields.h  json_loader.cpp  json_loader.h  logger.cpp  logger.h  loot_generator.cpp  main.cpp  model.cpp  model.h  model_properties.h  random_generator.h  request_handler.cpp  request_handler.h  save_manager.cpp  save_manager.h  serializer.cpp  serializer.h  ticker.h  update_items.cpp  update_items.h
tests/: collision-detector-tests.cpp  collision-detector-tests.h  http_utils_tests.cpp  serialization_tests.cpp  url_decode_tests.cpp
